--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
     "@mui/material": "^6.1.1",
+    "@react-spring/web": "^9.7.4",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
