--- a/package.json
+++ b/package.json
@@ -10,25 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.25.6",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@ffmpeg/ffmpeg": "^0.12.10",
     "@headlessui/react": "^2.1.8",
     "@heroicons/react": "^2.1.5",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^6.1.1",
     "@react-spring/web": "^9.7.4",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-speech-kit": "^3.0.1",
+    "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.25.4",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
