--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-flow-renderer": "^10.3.17",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-speech-kit": "^3.0.1",
     "react-speech-recognition": "^3.10.0"
